--- a/src/epub/text/book-1.xhtml
+++ b/src/epub/text/book-1.xhtml
@@ -143,7 +143,7 @@
 					<p>But when the senate declined to interfere, and his opponents declared that they would accept no compromise in a matter affecting the public welfare, he crossed to Hither Gaul, and after holding all the assizes, halted at Ravenna, intending to resort to war if the senate took any drastic action against the tribunes of the commons who interposed vetoes in his behalf.<a href="endnotes.xhtml#note-28" id="noteref-28" epub:type="noteref">28</a> Now this was his excuse for the civil war, but it is believed that he had other motives. Gnaeus Pompeius used to declare that since Caesar’s own means were not sufficient to complete the works which he had planned, nor to do all that he had led the people to expect on his return, he desired a state of general unrest and turmoil. Others say that he dreaded the necessity of rendering an account for what he had done in his first consulship contrary to the auspices and the laws, and regardless of vetoes; for Marcus Cato often declared, and took oath too, that he would impeach Caesar the moment he had disbanded his army. It was openly said too that if he was out of office on his return, he would be obliged, like Milo, to make his defence in a court hedged about by armed men. The latter opinion is the more credible one in view of the assertion of Asinius Pollio, that when Caesar at the battle of Pharsalus saw his enemies slain or in flight, he said, word for word: “They would have it so. Even I, Gaius Caesar, after so many great deeds, should have been found guilty, if I had not turned to my army for help.” Some think that habit had given him a love of power, and that weighing the strength of his adversaries against his own, he grasped the opportunity of usurping the despotism which had been his heart’s desire from early youth. Cicero too was seemingly of this opinion, when he wrote in the third book of his <i epub:type="se:name.publication.book">De Officiis</i><a href="endnotes.xhtml#note-29" id="noteref-29" epub:type="noteref">29</a> that Caesar ever had upon his lips these lines of Euripides,<a href="endnotes.xhtml#note-30" id="noteref-30" epub:type="noteref">30</a> of which Cicero himself adds a version:</p>
 					<blockquote epub:type="z3998:verse">
 						<p>
-							<span>If wrong may e’er be right, for a throne’s sake</span>
+							<span>“If wrong may e’er be right, for a throne’s sake</span>
 							<br/>
 							<span>Were wrong most right:⁠—be God in all else feared.”<a href="endnotes.xhtml#note-31" id="noteref-31" epub:type="noteref">31</a></span>
 						</p>
@@ -376,7 +376,7 @@
 					</p>
 					<blockquote epub:type="z3998:verse">
 						<p>
-							<span>Caesar led the Gauls in triumph, led them to the senate house;</span>
+							<span>“Caesar led the Gauls in triumph, led them to the senate house;</span>
 							<br/>
 							<span>Then the Gauls put off their breeches, and put on the laticlave.”<a href="endnotes.xhtml#note-70" id="noteref-70" epub:type="noteref">70</a></span>
 						</p>
