--- a/src/epub/text/book-3.xhtml
+++ b/src/epub/text/book-3.xhtml
@@ -293,27 +293,27 @@
 					</blockquote>
 					<blockquote epub:type="z3998:verse">
 						<p>
-							<span>You are no knight. Why so? The hundred thousands are lacking;<a href="endnotes.xhtml#note-321" id="noteref-321" epub:type="noteref">321</a></span>
-							<span>If you ask the whole tale, you were an exile at Rhodes.<a href="endnotes.xhtml#note-322" id="noteref-322" epub:type="noteref">322</a></span>
+							<span>“You are no knight. Why so? The hundred thousands are lacking;<a href="endnotes.xhtml#note-321" id="noteref-321" epub:type="noteref">321</a></span>
+							<span>If you ask the whole tale, you were an exile at Rhodes.”<a href="endnotes.xhtml#note-322" id="noteref-322" epub:type="noteref">322</a></span>
 						</p>
 					</blockquote>
 					<blockquote epub:type="z3998:verse">
 						<p>
-							<span>You, O Caesar, have altered the golden ages of Saturn;</span>
+							<span>“You, O Caesar, have altered the golden ages of Saturn;</span>
 							<br/>
-							<span>For while you are alive, iron they ever will be.</span>
+							<span>For while you are alive, iron they ever will be.”</span>
 						</p>
 					</blockquote>
 					<blockquote epub:type="z3998:verse">
 						<p>
-							<span>Nothing for wine cares this fellow, since now ’tis for blood he is thirsting;</span>
+							<span>“Nothing for wine cares this fellow, since now ’tis for blood he is thirsting;</span>
 							<br/>
-							<span>This he as greedily quaffs as before wine without water.</span>
+							<span>This he as greedily quaffs as before wine without water.”</span>
 						</p>
 					</blockquote>
 					<blockquote epub:type="z3998:verse">
 						<p>
-							<span>Look, son of Rome, upon Sulla, for himself not for you blest and happy,<a href="endnotes.xhtml#note-323" id="noteref-323" epub:type="noteref">323</a></span>
+							<span>“Look, son of Rome, upon Sulla, for himself not for you blest and happy,<a href="endnotes.xhtml#note-323" id="noteref-323" epub:type="noteref">323</a></span>
 							<br/>
 							<span>Marius too, if you will, but after capturing Rome;</span>
 							<br/>
