[Editorial] Add matching quotation marks to some blockquotes

--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -329,7 +329,7 @@
 						<p>He was tall of stature, with a modest expression and a high colour.<a href="endnotes.xhtml#note-960" id="noteref-960" epub:type="noteref">960</a> His eyes were large, but his sight was somewhat dim. He was handsome and graceful too, especially when a young man, and indeed in his whole body with the exception of his feet, the toes of which were somewhat cramped. In later life he had the further disfigurement of baldness, a protruding belly, and spindling legs, though the latter had become thin from a long illness. He was so conscious that the modesty of his expression was in his favour, that he once made this boast in the senate: “So far, at any rate, you have approved my heart and my countenance.” He was so sensitive about his baldness, that he regarded it as a personal insult if anyone else was twitted with that defect in jest or in earnest; though in a book “On the Care of the Hair,” which he published and dedicated to a friend, he wrote the following by way of consolation to the man and himself:</p>
 						<blockquote>
 							<p>“Do you not see that I am too tall and comely to look on?<a href="endnotes.xhtml#note-961" id="noteref-961" epub:type="noteref">961</a></p>
-							<p>And yet the same fate awaits my hair, and I bear with resignation the ageing of my locks in youth. Be assured that nothing is more pleasing than beauty, but nothing shorter-lived.”</p>
+							<p>“And yet the same fate awaits my hair, and I bear with resignation the ageing of my locks in youth. Be assured that nothing is more pleasing than beauty, but nothing shorter-lived.”</p>
 						</blockquote>
 					</li>
 					<li id="book-8-3-19">
