--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -32,7 +32,7 @@
 					<a href="text/book-6.xhtml">Book <span epub:type="z3998:roman">VI</span></a>
 				</li>
 				<li>
-					<a href="text/book-7.xhtml">Book <span epub:type="z3998:roman">VII</span>: Galba⁠—Otho⁠—Vitellius</a>
+					<a href="text/book-7.xhtml">Book <span epub:type="z3998:roman">VII</span>: Galba—Otho—Vitellius</a>
 					<ol>
 						<li>
 							<a href="text/book-7.xhtml#book-7-1">Galba</a>
@@ -46,7 +46,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="text/book-8.xhtml">Book <span epub:type="z3998:roman">VIII</span>: The Deified Vespasian⁠—The Deified Titus⁠—Domitian</a>
+					<a href="text/book-8.xhtml">Book <span epub:type="z3998:roman">VIII</span>: The Deified Vespasian—The Deified Titus—Domitian</a>
 					<ol>
 						<li>
 							<a href="text/book-8.xhtml#book-8-1">The Deified Vespasian</a>
