--- a/src/epub/text/book-3.xhtml
+++ b/src/epub/text/book-3.xhtml
@@ -7,10 +7,13 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-3" epub:type="chapter">
-			<h2 epub:type="title">
-				<span>Book <span epub:type="z3998:roman">III</span></span>
-				<span epub:type="subtitle">Tiberius</span>
-			</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Book</span>
+					<span epub:type="ordinal z3998:roman">III</span>
+				</h2>
+				<h3 epub:type="title">Tiberius</h3>
+			</hgroup>
 			<ol>
 				<li id="book-3-1">
 					<p>The patrician branch of the Claudian family (for there was, besides, a plebeian branch of no less influence and prestige) originated at Regilli, a town of the Sabines. From there it moved to Rome shortly after the founding of the city with a large band of dependents, through the influence of Titus Tatius, who shared the kingly power with Romulus (or, according to the generally accepted view, of Atta Claudius, the head of the family) about six years after the expulsion of the kings.<a href="endnotes.xhtml#note-242" id="noteref-242" epub:type="noteref">242</a> It was admitted among the patrician families, receiving, besides, from the State a piece of land on the farther side of the Anio for its dependents, and a burial-site for the family at the foot of the Capitoline hill. Then as time went on it was honoured with twenty-eight consulships, five dictatorships, seven censorships, six triumphs, and two ovations.<a href="endnotes.xhtml#note-243" id="noteref-243" epub:type="noteref">243</a> While the members of the family were known by various forenames and surnames, they discarded the forename Lucius by common consent after two of the family who bore it had been found guilty, the one of highway robbery, and the other of murder. To their surnames, on the other hand, they added that of Nero, which in the Sabine tongue means “strong and valiant.”</p>
