--- a/src/epub/text/book-4.xhtml
+++ b/src/epub/text/book-4.xhtml
@@ -7,10 +7,13 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-4" epub:type="chapter">
-			<h2 epub:type="title">
-				<span>Book <span epub:type="z3998:roman">IV</span></span>
-				<span epub:type="subtitle">Gaius Caligula</span>
-			</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Book</span>
+					<span epub:type="ordinal z3998:roman">IV</span>
+				</h2>
+				<h3 epub:type="title">Gaius Caligula</h3>
+			</hgroup>
 			<ol>
 				<li id="book-4-1">
 					<p>Germanicus, father of Gaius Caesar, son of Drusus and the younger Antonia, after being adopted by his paternal uncle Tiberius, held the quaestorship five years before the legal age and passed directly to the consulship.<a href="endnotes.xhtml#note-344" id="noteref-344" epub:type="noteref">344</a> When the death of Augustus was announced, he was sent to the army in Germany, where it is hard to say whether his filial piety or his courage was more conspicuous; for although all the legions obstinately refused to accept Tiberius as emperor, and offered him the rule of the state,<a href="endnotes.xhtml#note-345" id="noteref-345" epub:type="noteref">345</a> he held them to their allegiance. And later he won a victory over the enemy and celebrated a triumph. Then chosen consul for a second time, before he entered on his term he was hurried off to restore order in the Orient, and after vanquishing the king of Armenia and reducing Cappadocia to the form of a province, died of a lingering illness at Antioch, in the thirty-fourth year of his age. There was some suspicion that he was poisoned; for besides the dark spots which appeared all over his body and the froth which flowed from his mouth, after he had been reduced to ashes his heart was found entire among his bones; and it is supposed to be a characteristic of that organ that when steeped in poison it cannot be destroyed by fire.</p>
