--- a/src/epub/text/book-6.xhtml
+++ b/src/epub/text/book-6.xhtml
@@ -7,10 +7,13 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-6" epub:type="chapter">
-			<h2 epub:type="title">
-				<span>Book <span epub:type="z3998:roman">VI</span></span>
-				<span epub:type="subtitle">Nero</span>
-			</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Book</span>
+					<span epub:type="ordinal z3998:roman">VI</span>
+				</h2>
+				<h3 epub:type="title">Nero</h3>
+			</hgroup>
 			<ol>
 				<li id="book-6-1">
 					<p>Of the Domitian family two branches have acquired distinction, the Calvini and the Ahenobarbi. The latter have as the founder of their race and the origin of their surname Lucius Domitius, to whom, as he was returning from the country, there once appeared twin youths of more than mortal majesty, so it is said, and bade him carry to the senate and people the news of a victory,<a href="endnotes.xhtml#note-567" id="noteref-567" epub:type="noteref">567</a> which was as yet unknown. And as a token of their divinity it is said that they stroked his cheeks and turned his black beard to a ruddy hue, like that of bronze. This sign was perpetuated in his descendants, a great part of whom had red beards. After they had attained seven consulships, a triumph, and two censorships, and were enrolled among the patricians, they all continued to use the same surname. They confined their forenames to Gnaeus and Lucius, and used even these with a noteworthy variation, now conferring each one on three members of the family in succession, and now giving them to individual members in turn. Thus the first, second, and third of the Ahenobarbi, we are told, were called Lucius, the next three in order Gnaeus, while all those that followed were called in turn first Lucius and then Gnaeus. It seems to me worth while to give an account of several members of this family, to show more clearly that though Nero degenerated from the good qualities of his ancestors, he yet reproduced the vices of each of them, as if transmitted to him by natural inheritance.</p>
