--- a/src/epub/text/book-5.xhtml
+++ b/src/epub/text/book-5.xhtml
@@ -7,10 +7,13 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-5" epub:type="chapter">
-			<h2 epub:type="title">
-				<span>Book <span epub:type="z3998:roman">V</span></span>
-				<span epub:type="subtitle">The Deified Claudius</span>
-			</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Book</span>
+					<span epub:type="ordinal z3998:roman">V</span>
+				</h2>
+				<h3 epub:type="title">The Deified Claudius</h3>
+			</hgroup>
 			<ol>
 				<li id="book-5-1">
 					<p>
