--- a/src/epub/text/book-7.xhtml
+++ b/src/epub/text/book-7.xhtml
@@ -7,10 +7,13 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-7" epub:type="part">
-			<h2 epub:type="title">
-				<span>Book <span epub:type="z3998:roman">VII</span></span>
-				<span epub:type="subtitle">Galba⁠—Otho⁠—Vitellius</span>
-			</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Book</span>
+					<span epub:type="ordinal z3998:roman">VII</span>
+				</h2>
+				<h3 epub:type="title">Galba⁠—Otho⁠—Vitellius</h3>
+			</hgroup>
 			<section id="book-7-1" epub:type="chapter">
 				<h3 epub:type="title">Galba</h3>
 				<ol>
