--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -7,10 +7,13 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-8" epub:type="part">
-			<h2 epub:type="title">
-				<span>Book <span epub:type="z3998:roman">VIII</span></span>
-				<span epub:type="subtitle">The Deified Vespasian⁠—The Deified Titus⁠—Domitian</span>
-			</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Book</span>
+					<span epub:type="ordinal z3998:roman">VIII</span>
+				</h2>
+				<h3 epub:type="title">The Deified Vespasian⁠—The Deified Titus⁠—Domitian</h3>
+			</hgroup>
 			<section id="book-8-1" epub:type="chapter">
 				<h3 epub:type="title">The Deified Vespasian</h3>
 				<ol>
