--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,22 +14,22 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span></a>
+					<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span>: The Deified Julius</a>
 				</li>
 				<li>
-					<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span></a>
+					<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span>: The Deified Augustus</a>
 				</li>
 				<li>
-					<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span></a>
+					<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span>: Tiberius</a>
 				</li>
 				<li>
-					<a href="text/book-4.xhtml">Book <span epub:type="z3998:roman">IV</span></a>
+					<a href="text/book-4.xhtml">Book <span epub:type="z3998:roman">IV</span>: Gaius Caligula</a>
 				</li>
 				<li>
-					<a href="text/book-5.xhtml">Book <span epub:type="z3998:roman">V</span></a>
+					<a href="text/book-5.xhtml">Book <span epub:type="z3998:roman">V</span>: The Deified Claudius</a>
 				</li>
 				<li>
-					<a href="text/book-6.xhtml">Book <span epub:type="z3998:roman">VI</span></a>
+					<a href="text/book-6.xhtml">Book <span epub:type="z3998:roman">VI</span>: Nero</a>
 				</li>
 				<li>
 					<a href="text/book-7.xhtml">Book <span epub:type="z3998:roman">VII</span>: Galba—Otho—Vitellius</a>
