Update CSS to new standards

--- a/src/epub/text/book-2.xhtml
+++ b/src/epub/text/book-2.xhtml
@@ -224,7 +224,7 @@
 					<blockquote>
 						<p>Romans, lords of the world, the nation clad in the toga,”<a href="endnotes.xhtml#note-132" id="noteref-132" epub:type="noteref">132</a></p>
 					</blockquote>
-					<p>and he directed the aediles never again to allow anyone to appear in the Forum or its neighbourhood except in the toga and without a cloak.</p>
+					<p class="continued">and he directed the aediles never again to allow anyone to appear in the Forum or its neighbourhood except in the toga and without a cloak.</p>
 				</li>
 				<li id="book-2-41">
 					<p>
