--- a/src/epub/text/book-7.xhtml
+++ b/src/epub/text/book-7.xhtml
@@ -93,7 +93,7 @@
 								<span>“Here comes Onesimus from his farm”<a href="endnotes.xhtml#note-763" id="noteref-763" epub:type="noteref">763</a></span>
 							</p>
 						</blockquote>
-						<p>all the spectators at once finished the song in chorus and repeated it several times with appropriate gestures, beginning with that verse.</p>
+						<p class="continued">all the spectators at once finished the song in chorus and repeated it several times with appropriate gestures, beginning with that verse.</p>
 					</li>
 					<li id="book-7-1-14">
 						<p>
