--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -129,7 +129,7 @@
 								<span>“Striding along and waving a lance that casts a long shadow,”<a href="endnotes.xhtml#note-872" id="noteref-872" epub:type="noteref">872</a></span>
 							</p>
 						</blockquote>
-						<p>and of the freedman Cerylus, who was very rich, and to cheat the privy purse of its dues at his death had begun to give himself out as freeborn, changing his name to Laches:</p>
+						<p class="continued">and of the freedman Cerylus, who was very rich, and to cheat the privy purse of its dues at his death had begun to give himself out as freeborn, changing his name to Laches:</p>
 						<blockquote epub:type="z3998:verse">
 							<p>
 								<span>“O Laches, Laches,</span>
