--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -1084,7 +1084,7 @@
 					<p>They were compelled to fulfil their vows; see <a href="book-4.xhtml#book-4-27-2">Caligula, 27.2</a>. <a href="book-4.xhtml#noteref-358" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-359" epub:type="endnote">
-					<p><abbr>Cf.</abbr> <a href="book-7.xhtml#book-7-3-2-4">Vitellius, 2.</a>. <a href="book-4.xhtml#noteref-359" epub:type="backlink">↩</a></p>
+					<p><abbr>Cf.</abbr> <a href="book-7.xhtml#book-7-3-2-4">Vitellius, 2</a>. <a href="book-4.xhtml#noteref-359" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-360" epub:type="endnote">
 					<p>Of Augustus; see <a href="book-2.xhtml#book-2-100-4">Augustus, 100.4</a>. <a href="book-4.xhtml#noteref-360" epub:type="backlink">↩</a></p>
