Add word joiners before and after hair spaces that precede horizontal ellipses

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -2434,7 +2434,7 @@
 					<p>See <a href="book-2.xhtml#book-2-32-2">Augustus, 32.2</a>. <a href="book-7.xhtml#noteref-808" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-809" epub:type="endnote">
-					<p>See <a href="book-2.xhtml#book-2-73">Augustus, 73</a> and the note. See also Seneca, <i epub:type="se:name.publication.book">De Tranquillitate Animi</i> 1.5, <i xml:lang="la">placet … non ex arcula prolata vestis … sed domestica et vilis, nec servata nec sumenda sollicite</i>. <a href="book-7.xhtml#noteref-809" epub:type="backlink">↩</a></p>
+					<p>See <a href="book-2.xhtml#book-2-73">Augustus, 73</a> and the note. See also Seneca, <i epub:type="se:name.publication.book">De Tranquillitate Animi</i> 1.5, <i xml:lang="la">placet⁠ ⁠… non ex arcula prolata vestis⁠ ⁠… sed domestica et vilis, nec servata nec sumenda sollicite</i>. <a href="book-7.xhtml#noteref-809" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-810" epub:type="endnote">
 					<p>Vienne, on the Rhone. <a href="book-7.xhtml#noteref-810" epub:type="backlink">↩</a></p>
