--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -346,7 +346,7 @@
 					<p><i xml:lang="la">Exigere</i> is the technical term for making weights and measures correspond with the standards in charge of the aediles; see CIL <span epub:type="z3998:roman">XIV</span>.4124.1, 2; <span epub:type="z3998:roman">X</span>.8067.2; <abbr>etc.</abbr> <a href="book-2.xhtml#noteref-112" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-113" epub:type="endnote">
-					<p>According to Richter, <i epub:type="se:name.publication.book">Topographie von Rom</i>, p229, the <i xml:lang="la">regia</i> was the main door, leading from the stage of the theatre to the colonnade. <a href="book-2.xhtml#noteref-113" epub:type="backlink">↩</a></p>
+					<p>According to Richter, <i epub:type="se:name.publication.book">Topographie von Rom</i>, <abbr>pp.</abbr> 229, the <i xml:lang="la">regia</i> was the main door, leading from the stage of the theatre to the colonnade. <a href="book-2.xhtml#noteref-113" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-114" epub:type="endnote">
 					<p>The <i xml:lang="la">ergastula</i> were prisons for slaves, who were made to work in chains in the fields. <a href="book-2.xhtml#noteref-114" epub:type="backlink">↩</a></p>
@@ -475,7 +475,7 @@
 					<p>The form of purchase consisted in thrice touching a balance (<i xml:lang="la">libra</i>) with a penny (<i xml:lang="la">as</i>), in the presence of the praetor. <a href="book-2.xhtml#noteref-155" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-156" epub:type="endnote">
-					<p>A record of the events of the imperial household. The custom of keeping such a daybook apparently dated from the time of Augustus. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation), <span epub:type="z3998:roman">IV</span>, p56. <a href="book-2.xhtml#noteref-156" epub:type="backlink">↩</a></p>
+					<p>A record of the events of the imperial household. The custom of keeping such a daybook apparently dated from the time of Augustus. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation), <span epub:type="z3998:roman">IV</span>, 56. <a href="book-2.xhtml#noteref-156" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-157" epub:type="endnote">
 					<p>The host usually occupied the <i xml:lang="la">summus locus</i> on the <i xml:lang="la">imus lectus</i>. <a href="book-2.xhtml#noteref-157" epub:type="backlink">↩</a></p>
@@ -550,7 +550,7 @@
 					<p>Opposed to <i xml:lang="la">vestis forensis</i> or <i xml:lang="la">forensia</i> (<i xml:lang="la">vestimenta</i>); <abbr>cf.</abbr> <a href="book-7.xhtml#book-7-3-8">Vitellius, 8.1</a>. <a href="book-2.xhtml#noteref-180" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-181" epub:type="endnote">
-					<p>The <i xml:lang="la">cena recta</i> was a regular dinner, at which the guests reclined on couches at a table, contrasted with <i xml:lang="la">sportula</i>, an informal meal (<a href="book-5.xhtml#book-5-21-4">Claudius, 21.4</a>) or a distribution of food. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist translation), <span epub:type="z3998:roman">IV</span> pp77 <abbr class="eoc">ff.</abbr> <a href="book-2.xhtml#noteref-181" epub:type="backlink">↩</a></p>
+					<p>The <i xml:lang="la">cena recta</i> was a regular dinner, at which the guests reclined on couches at a table, contrasted with <i xml:lang="la">sportula</i>, an informal meal (<a href="book-5.xhtml#book-5-21-4">Claudius, 21.4</a>) or a distribution of food. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist translation), <span epub:type="z3998:roman">IV</span> <abbr>pp.</abbr> 77 <abbr class="eoc">ff.</abbr> <a href="book-2.xhtml#noteref-181" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-182" epub:type="endnote">
 					<p>See <a href="book-2.xhtml#book-2-72-2">Augustus, 72.2</a>. <a href="book-2.xhtml#noteref-182" epub:type="backlink">↩</a></p>
@@ -1177,7 +1177,7 @@
 					<p>The reason for the term <i xml:lang="la">decimas</i>, if the reading be correct, is uncertain; <abbr>cf.</abbr> note on <a href="book-2.xhtml#book-2-41-2">Augustus, 41.2</a>. Obviously his purpose was to lead the rabble to occupy the knights’ seats before the plays began, and thus to start a fight. <a href="book-4.xhtml#noteref-389" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-390" epub:type="endnote">
-					<p>The meaning of <i xml:lang="la">paegniarii</i> is uncertain; they may have carried <i xml:lang="la">arma lusoria</i> or arms incapable of causing death. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i>, English translation. <span epub:type="z3998:roman">IV</span> p179. <a href="book-4.xhtml#noteref-390" epub:type="backlink">↩</a></p>
+					<p>The meaning of <i xml:lang="la">paegniarii</i> is uncertain; they may have carried <i xml:lang="la">arma lusoria</i> or arms incapable of causing death. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i>, English translation. <span epub:type="z3998:roman">IV</span> <abbr>p.</abbr> 179. <a href="book-4.xhtml#noteref-390" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-391" epub:type="endnote">
 					<p>The <i xml:lang="la">elogium</i> was the tablet on which the charge against the prisoner was recorded. <a href="book-4.xhtml#noteref-391" epub:type="backlink">↩</a></p>
@@ -1204,10 +1204,10 @@
 					<p>For punishment, or to fight in the arena. <a href="book-4.xhtml#noteref-398" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-399" epub:type="endnote">
-					<p><i xml:lang="la">retiarii</i>: net-fighters who were lightly armed and fought with uncovered heads. They carried a net, in which they tried to entangle their opponents, and a trident and dagger, with which they slew them, if successful. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation p446, <abbr>ftn.</abbr> b) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-399" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">retiarii</i>: net-fighters who were lightly armed and fought with uncovered heads. They carried a net, in which they tried to entangle their opponents, and a trident and dagger, with which they slew them, if successful. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation <abbr>p.</abbr> 446, <abbr>ftn.</abbr> b) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-399" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-400" epub:type="endnote">
-					<p><i xml:lang="la">secutores</i>: the usual opponents of the <i xml:lang="la">retiarii</i>. They were armed with a sword, a shield, a greave and a visored helmet. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation p446, <abbr>ftn.</abbr> <i>b</i>) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-400" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">secutores</i>: the usual opponents of the <i xml:lang="la">retiarii</i>. They were armed with a sword, a shield, a greave and a visored helmet. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i> (Englist Translation <abbr>p.</abbr> 446, <abbr>ftn.</abbr> <i>b</i>) <span epub:type="z3998:roman">IV</span>, 171 <abbr class="eoc">ff.</abbr> <a href="book-4.xhtml#noteref-400" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-401" epub:type="endnote">
 					<p>See <a href="book-2.xhtml#book-2-23">Augustus, 23.1</a>. <a href="book-4.xhtml#noteref-401" epub:type="backlink">↩</a></p>
@@ -1267,7 +1267,7 @@
 					<p>Half the amount established by Augustus; see Dio, 55.23. <a href="book-4.xhtml#noteref-419" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-420" epub:type="endnote">
-					<p>Ordinarily such vehicles were allowed to pass through the city streets only before sunrise or during the last two hours of the day. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i>, English translation. <span epub:type="z3998:roman">IV</span> p28. <a href="book-4.xhtml#noteref-420" epub:type="backlink">↩</a></p>
+					<p>Ordinarily such vehicles were allowed to pass through the city streets only before sunrise or during the last two hours of the day. See Friedländer, <i epub:type="se:name.publication.book">Roman Life and Manners</i>, English translation. <span epub:type="z3998:roman">IV</span> <abbr>p.</abbr> 28. <a href="book-4.xhtml#noteref-420" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-421" epub:type="endnote">
 					<p>See <a href="book-2.xhtml#book-2-29-2">Augustus, 29.2</a>. <a href="book-4.xhtml#noteref-421" epub:type="backlink">↩</a></p>
@@ -1621,7 +1621,7 @@
 					<p><a href="book-5.xhtml#book-5-25">Claudius, 25</a>. <a href="book-5.xhtml#noteref-537" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-538" epub:type="endnote">
-					<p>The <i xml:lang="la">fulcra</i> were the ends of the couches on which the pillows were placed; see <i epub:type="se:name.publication.journal">Classical Review</i> 3, pp322 <abbr class="eoc">ff.</abbr> <a href="book-5.xhtml#noteref-538" epub:type="backlink">↩</a></p>
+					<p>The <i xml:lang="la">fulcra</i> were the ends of the couches on which the pillows were placed; see <i epub:type="se:name.publication.journal">Classical Review</i> 3, <abbr>pp.</abbr> 322 <abbr class="eoc">ff.</abbr> <a href="book-5.xhtml#noteref-538" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-539" epub:type="endnote">
 					<p><abbr>Cf.</abbr> <a href="book-2.xhtml#book-2-64-3">Augustus, 64.3</a>. <a href="book-5.xhtml#noteref-539" epub:type="backlink">↩</a></p>
@@ -2686,7 +2686,7 @@
 					<p>The old homestead at Cutiliae, near Reate; see <a href="book-8.xhtml#book-8-1-24">Vespasian, 24</a>. <a href="book-8.xhtml#noteref-892" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-893" epub:type="endnote">
-					<p>Various quarters and streets of the city were designated in this way; <abbr>cf.</abbr> <i xml:lang="la">ad Capita Bubula</i>, <a href="book-2.xhtml#book-2-5">Augustus, 5</a>; <i xml:lang="la">ad Pirum</i>, <i epub:type="se:name.publication.book">Epigrams of Martial</i> 1.117.6. <i xml:lang="la">Ad Malum Punicum</i> was a street on the Quirinal hill, probably corresponding with the modern Via delle Quattro Fontane; see Platner, <i>Topography of Rome</i>, p485. <a href="book-8.xhtml#noteref-893" epub:type="backlink">↩</a></p>
+					<p>Various quarters and streets of the city were designated in this way; <abbr>cf.</abbr> <i xml:lang="la">ad Capita Bubula</i>, <a href="book-2.xhtml#book-2-5">Augustus, 5</a>; <i xml:lang="la">ad Pirum</i>, <i epub:type="se:name.publication.book">Epigrams of Martial</i> 1.117.6. <i xml:lang="la">Ad Malum Punicum</i> was a street on the Quirinal hill, probably corresponding with the modern Via delle Quattro Fontane; see Platner, <i>Topography of Rome</i>, <abbr>p.</abbr> 485. <a href="book-8.xhtml#noteref-893" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-894" epub:type="endnote">
 					<p><abbr>Cf.</abbr> <a href="book-7.xhtml#book-7-2-12">Otho, 12.1</a>, at the end. <a href="book-8.xhtml#noteref-894" epub:type="backlink">↩</a></p>
@@ -2773,7 +2773,7 @@
 					<p>That is, those which had formerly been restricted to the senatorial order. <a href="book-8.xhtml#noteref-921" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-922" epub:type="endnote">
-					<p>Where the soldiers deposited their surplus money with the general for safe keeping, until the end of their term of service; see <i epub:type="se:name.publication.book">Vegetius</i> 2.20 and for fuller details Grenfell, Hunt, and Hogarth, <i epub:type="se:name.publication.book">Fayoum Towns and their Papyri</i>, pp252 <abbr class="eoc"><abbr>ff.</abbr></abbr>, where the accounts of two soldiers of about the year 180 are published. <a href="book-8.xhtml#noteref-922" epub:type="backlink">↩</a></p>
+					<p>Where the soldiers deposited their surplus money with the general for safe keeping, until the end of their term of service; see <i epub:type="se:name.publication.book">Vegetius</i> 2.20 and for fuller details Grenfell, Hunt, and Hogarth, <i epub:type="se:name.publication.book">Fayoum Towns and their Papyri</i>, <abbr>pp.</abbr> 252 <abbr class="eoc"><abbr>ff.</abbr></abbr>, where the accounts of two soldiers of about the year 180 are published. <a href="book-8.xhtml#noteref-922" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-923" epub:type="endnote">
 					<p>That is, raised the amount from nine to twelve <i xml:lang="la">aurei</i>. The <i xml:lang="la">aureus</i> contained 100 sesterces and was equal to a little over a pound sterling, or five dollars. <a href="book-8.xhtml#noteref-923" epub:type="backlink">↩</a></p>
