[Editorial] Servia -> Serbia

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -1510,7 +1510,7 @@
 					<p>Suetonius is vague. Dio, 60.19, says that one Bericus, who had been expelled from the island during a revolution, persuaded Claudius to send troops there. Possibly the reference is to the deserters mentioned in <a href="book-4.xhtml#book-4-44">Caligula, 44</a>. <a href="book-5.xhtml#noteref-500" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-501" epub:type="endnote">
-					<p>A suburb of Rome, lying north of the city, outside of the Servian wall. <a href="book-5.xhtml#noteref-501" epub:type="backlink">↩</a></p>
+					<p>A suburb of Rome, lying north of the city, outside of the Serbian wall. <a href="book-5.xhtml#noteref-501" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-502" epub:type="endnote">
 					<p>A large building in the campus Martius, where the votes cast in the elections were sorted and counted; according to Dio, 55.8, the largest building ever covered by a single roof. <a href="book-5.xhtml#noteref-502" epub:type="backlink">↩</a></p>
@@ -1591,7 +1591,7 @@
 					<p>That is, the gentile names such as Claudius, Cornelius, <abbr>etc.</abbr>; apparently forenames (Gaius, Lucius, and the like) and surnames (Lentulus, Nasica) might be assumed, although a foreigner often retained his native name as a surname. <a href="book-5.xhtml#noteref-527" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-528" epub:type="endnote">
-					<p>The part of the Esquiline hill on both sides of the Servian wall; occupied in part by the Gardens of Maecenas; see Horace <i epub:type="se:name.publication.book">Sermones</i> 1.8. The place of execution seems to have been outside of the Porta Esquilina. <a href="book-5.xhtml#noteref-528" epub:type="backlink">↩</a></p>
+					<p>The part of the Esquiline hill on both sides of the Serbian wall; occupied in part by the Gardens of Maecenas; see Horace <i epub:type="se:name.publication.book">Sermones</i> 1.8. The place of execution seems to have been outside of the Porta Esquilina. <a href="book-5.xhtml#noteref-528" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-529" epub:type="endnote">
 					<p>Another form of <i xml:lang="la">Christus</i>; see Tertullian, <i epub:type="se:name.publication.book">Apologeticum</i> 3 (at the end). It is uncertain whether Suetonius is guilty of an error in chronology or is referring to some Jew of that name. The former seems probable because of the absence of <i xml:lang="la">quodam</i>. Tacitus <i epub:type="se:name.publication.book">Annals</i> 15.44, uses the correct form, <i xml:lang="la">Christus</i>, and states that He was executed in the reign of Tiberius. <a href="book-5.xhtml#noteref-529" epub:type="backlink">↩</a></p>
